add pouchDB support for rendr

--- a/jxcore/index.html
+++ b/jxcore/index.html
@@ -96,9 +96,9 @@
         console.log("typeof describe:" + typeof describe);
 
 
-        //tests
+        //Load the express server in index.js then load the tests
         var testfiles = [
-            "./index.js", //express server
+            "./index.js",
             "./test/app/collections/repos.test.js",
             "./test/app/models/user.test.js",
             "./test/app/views/users_show_view.test.js"
